@@ -133,6 +133,9 @@ Release 2.8.0 - UNRELEASED
 
     YARN-3351. AppMaster tracking URL is broken in HA. (Anubhav Dhoot via kasha)
 
+    YARN-3269. Yarn.nodemanager.remote-app-log-dir could not be configured to 
+    fully qualified path. (Xuan Gong via junping_du)
+
 Release 2.7.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
